2011-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Add S3_SERVER_SIDE_ENCRYPTION property.
	* device-src/s3.c: Add server_side_encryption.
 	* device-src/s3.h: Add server_side_encryption.
	* man/xml-source/amanda-devices.7.xml: Document
	  S3_SERVER_SIDE_ENCRYPTION property

2011-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm (release): Always call finished_cb.
	* installcheck/amcheck-device.pl: Add a check.

2011-10-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c (update_info_dumper): Set date to 0 if
	  datestamp is 0.

2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: If datadir is not set, use the disk
	  argument.

2011-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not free cwd.
	* common-src/amgetconf.pl: Allow to get one property.
	* installcheck/amgetconf.pl: Test it.

2011-10-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Retry in case of CURLE_SSL_CONNECT_ERROR error.

2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Add support for fc14 and fc15.

2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Do not crahs if amidxtaped close the
	  connection.

2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Correctly set thunk->next_marker.

2011-09-30 Dan Locks <dwlocks@zmanda.com>
	*  packaging/common/substitute.pl: fix PKG_REV missing message.
	*  packaging/sun-pkg/buildpkg, packaging/deb/buildpkg,
	   packaging/rpm/buildpkg: create PKG_REV file until the machinery to
	   process svn tags for PKG_REV is in place

2011-09-29 Dan Locks <dwlocks@zmanda.com>
	*  packaging/sun-pkg: sun package subdirectories
	*  packaging/sun-pkg/buildpkg: sun package building script
	*  packaging/common/mock_utils.sh: mocked utilities used by pre/post
	   scripts
	*  packaging/common/post_inst_functions.sh,